--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 	<link rel="stylesheet" href="libs/leaflet@1.9.4/leaflet.css" />
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="libs/leaflet@1.9.4/leaflet.js"></script>
+	<script src="libs/leaflet-easybutton@2.4.0/easy-button.js"></script>
 	<script src="libs/js-yaml@3.12.0/js-yaml.min.js"></script>
 </head>
 <body>
 	<div id="map"></div>
+	<div id="runlist-dropdown" style="display: none; z-index: 1000; background: white; opacity: 0.9;">
+		<ul></ul>
+	</div>
 	<script src="js/common.js"></script>
 	<script src="js/db.js"></script>
 	<script src="js/map.js"></script>
