Move popup related code to map_popup.js

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 	<script src="js/common.js"></script>
 	<script src="js/db.js"></script>
 	<script src="js/map.js"></script>
+	<script src="js/map_popup.js"></script>
 </body>
 </html>
