--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HundoDB</title>
+	<link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="libs/leaflet@1.9.4/leaflet.css" />
+	<link rel="stylesheet" href="libs/leaflet-sidebar-v2@3.2.3/leaflet-sidebar.css" />
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="libs/leaflet@1.9.4/leaflet.js"></script>
+	<script src="libs/leaflet-sidebar-v2@3.2.3/leaflet-sidebar.min.js"></script>
 	<script src="libs/leaflet-easybutton@2.4.0/easy-button.js"></script>
 	<script src="libs/js-yaml@3.12.0/js-yaml.min.js"></script>
 </head>
