--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="libs/leaflet@1.9.4/leaflet.css" />
 	<link rel="stylesheet" href="libs/leaflet-sidebar-v2@3.2.3/leaflet-sidebar.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="libs/leaflet@1.9.4/leaflet.js"></script>
-	<script src="libs/leaflet-sidebar-v2@3.2.3/leaflet-sidebar.min.js"></script>
+	<script src="libs/leaflet-sidebar-v2@3.2.3/leaflet-sidebar.js"></script>
 	<script src="libs/leaflet-easybutton@2.4.0/easy-button.js"></script>
 	<script src="libs/js-yaml@3.12.0/js-yaml.min.js"></script>
 </head>
@@ -19,9 +20,43 @@
 	<div id="runlist-dropdown" style="display: none; z-index: 1000; background: white; opacity: 0.9;">
 		<ul></ul>
 	</div>
+	<div id="compare_pane_content" style="display: none">
+		<table style="background-color: transparent; border: none">
+			<tbody>
+				<tr>
+					<td class="h6" style="text-align:left;border:none;color:white">Compare:  </td>
+					<td style="border:none;width:10px"></td>
+					<td style="text-align:left;border:none;width:100%">
+						<select class="form-select form-select-sm" id="compare_select" onchange="updateComparePaneTable()">
+							<option selected value="">Select Run:</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td class="h6" style="text-align:left;border:none;color:white">With:</td>
+					<td style="border:none"></td>
+					<td style="text-align:left;border:none">
+						<select class="form-select form-select-sm" id="with_select" onchange="updateComparePaneTable()">
+							<option selected value="communitybest">Community Best</option>
+						</select>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<br>
+		<div class="form-check form-switch h6" style="color:white">
+			<input class="form-check-input" type="checkbox" id="compare_sort" style="margin-top: 2px" onchange="updateComparePaneTable()">
+			<label class="form-check-label" for="compare_sort">Sort by time difference</label>
+		</div>
+		<hr style="color: rgba(255,255,255,0.8);">
+		<table style="background-color: transparent; border: none; width: 100%" id="compare_table">
+		</table>
+	</div>
 	<script src="js/common.js"></script>
 	<script src="js/db.js"></script>
 	<script src="js/map.js"></script>
 	<script src="js/map_popup.js"></script>
+	<script src="js/compare_pane.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
