--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="libs/leaflet@1.9.4/leaflet.js"></script>
-	<script src="libs/leaflet-sidebar-v2@3.2.3/leaflet-sidebar.js"></script>
+	<script src="libs/leaflet-sidebar-v2@3.2.3/leaflet-sidebar.min.js"></script>
 	<script src="libs/leaflet-easybutton@2.4.0/easy-button.js"></script>
 	<script src="libs/js-yaml@3.12.0/js-yaml.min.js"></script>
 </head>
