Color labels in compare table, automatically highlight compare run

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<td class="h6" style="text-align:left;border:none;color:white">Compare:  </td>
 					<td style="border:none;width:10px"></td>
 					<td style="text-align:left;border:none;width:100%">
-						<select class="form-select form-select-sm" id="compare_select" onchange="updateComparePaneTable()">
+						<select class="form-select form-select-sm" id="compare_select" onchange="onCompareRunChange()">
 							<option selected value="">Select Run:</option>
 						</select>
 					</td>
