Support URL parameters to popup dialog

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<li class="h6">Click a <span class="clickable" id="help_panel_movement">movement</span>, <span class="clickable" id="help_panel_shrine">shrine</span> or <span class="clickable" id="help_panel_divinebeast">divine beast</span> to see its time in the runs.</li>
 			<li class="h6">In the popup dialog:
 				<ul>
-					<li class="h6" style="padding-top: 8px;">Click any <span class="hoverable" id="help_panel_time">time</span> to open the corresponding video segment</li>
+					<li class="h6" style="padding-top: 8px;">Click any <span class="hoverable" id="help_panel_time">time</span> to open the corresponding video segment.</li>
 					<li class="h6"><span class="hoverable" id="help_panel_selectrows">Select rows</span> to <span class="hoverable" id="help_panel_view">view</span> them side by side.</li>
 					<li class="h6">Clicking a <span class="hoverable" id="help_panel_run">run</span> highlights it.</li>
 				</ul>
@@ -69,10 +69,11 @@
 	</div>
 	<script src="js/common.js"></script>
 	<script src="js/db.js"></script>
-	<script src="js/map.js"></script>
-	<script src="js/map_popup.js"></script>
+	<script src="js/sidebar.js"></script>
 	<script src="js/compare_panel.js"></script>
 	<script src="js/help_panel.js"></script>
+	<script src="js/map_popup.js"></script>
+	<script src="js/map.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
