Support URL parameters to compare runs

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<ul>
 					<li class="h6" style="padding-top: 8px;">Click any <span class="hoverable" id="help_panel_time">time</span> to open the corresponding video segment.</li>
 					<li class="h6"><span class="hoverable" id="help_panel_selectrows">Select rows</span> to <span class="hoverable" id="help_panel_view">view</span> them side by side.</li>
-					<li class="h6">Clicking a <span class="hoverable" id="help_panel_run">run</span> highlights it.</li>
+					<li class="h6">Click a <span class="hoverable" id="help_panel_run">run</span> to highlight it.</li>
 				</ul>
 			</li>
 			<li class="h6">Compare runs with each other or against community best in the <span class="clickable" id="help_panel_comparepanel">compare panel</span>.</li>
