Add link to issue page on help panel

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 				</ul>
 			</li>
 			<li class="h6">Compare runs with each other or against community best in the <span class="clickable" id="help_panel_comparepanel">compare panel</span>.</li>
+			<li class="h6">Report <a href="https://github.com/minghaob/hundodb/issues" target="_blank" class="clickable">here</a> for feature requests, bugs or request to add specific runs. (or just message author on Discord.)</li>
 		</ol>
 	</div>
 	<script src="js/common.js"></script>
