--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HundoDB</title>
-	<link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="libs/leaflet@1.9.4/leaflet.css" />
 	<link rel="stylesheet" href="libs/leaflet-sidebar-v2@3.2.3/leaflet-sidebar.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -72,6 +72,7 @@
 	<script src="js/db.js"></script>
 	<script src="js/sidebar.js"></script>
 	<script src="js/compare_panel.js"></script>
+	<script src="js/export_panel.js"></script>
 	<script src="js/help_panel.js"></script>
 	<script src="js/map_popup.js"></script>
 	<script src="js/map.js"></script>
