--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 		<br>
 		<div class="form-check form-switch h6" style="color:white">
 			<input class="form-check-input" type="checkbox" id="export_split_time" style="margin-top: 2px">
-			<label class="form-check-label" for="export_split_time">Export split time</label>
-			<span style="color:gray">(Be aware of <a href="https://github.com/minghaob/hundodb/split_timings" target="_blank" class="clickable">split timings</a>)</span>
+			<label class="form-check-label" for="export_split_time">Export split times</label>
+			<span style="color:gray">(Be aware of <a href="https://github.com/minghaob/hundodb/blob/main/docs/split_timing.md" target="_blank" class="clickable">split timings</a>)</span>
 		</div>
 		<button type="button" class="btn btn-sm btn-primary" id="export_splits" style="width:100%" disabled><i class="fa fa-file-export"></i> Export LiveSplit (*.lss)</button>
 	</div>
