Update help panel. Make split time exported by default.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		</table>
 		<br>
 		<div class="form-check form-switch h6" style="color:white">
-			<input class="form-check-input" type="checkbox" id="export_split_time" style="margin-top: 2px">
+			<input class="form-check-input" type="checkbox" id="export_split_time" style="margin-top: 2px" checked>
 			<label class="form-check-label" for="export_split_time">Export split times</label>
 			<span style="color:gray">(Be aware of <a href="https://github.com/minghaob/hundodb/blob/main/docs/split_timing.md" target="_blank" class="clickable">split timings</a>)</span>
 		</div>
@@ -92,6 +92,7 @@
 				</ul>
 			</li>
 			<li class="h6">Compare runs with each other or against community best in the <span class="clickable" id="help_panel_comparepanel">compare panel</span>.</li>
+			<li class="h6">Export splits from a run in the <span class="clickable" id="help_panel_exportpanel">export panel</span>.</li>
 			<li class="h6">Report <a href="https://github.com/minghaob/hundodb/issues" target="_blank" class="clickable">here</a> for feature requests, bugs or request to add specific runs. (or just message author on Discord.)</li>
 		</ol>
 	</div>
